# Ordo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT_SUMMARY.md  Cargo.toml  Dockerfile  ENGINE_INTEGRATION.md  ENGINE_INTEGRATION_SUMMARY.md  README.md  SCHEMA_JIT_BENCHMARK_REPORT.md  baseline_benchmark_results.txt  cliff.toml  clippy.toml  deny.toml  optimization_benchmark_results.txt  test_loan_approval.ordo
.cursor/skills/ordo-editor-component/: SKILL.md
.cursor/skills/ordo-expression-syntax/: SKILL.md
.cursor/skills/ordo-jit-optimization/: SKILL.md
.cursor/skills/ordo-rule-development/: SKILL.md
.cursor/skills/ordo-server-deployment/: SKILL.md
.cursor/skills/ordo-testing/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-docs-custom.yml  deploy-playground.yml  npm-publish.yml  release.yml
benchmark/: BENCHMARK_REPORT_CN.md  BENCHMARK_REPORT_EN.md
crates/ordo-cli/: Cargo.toml
crates/ordo-cli/src/: eval.rs  exec.rs  main.rs  test_runner.rs
crates/ordo-core/: Cargo.toml
crates/ordo-core/benches/: engine_bench.rs  init_bench.rs  jit_bench.rs  jit_comparison_bench.rs  jit_realistic_bench.rs  jit_stress_bench.rs  optimization_bench.rs  schema_jit_bench.rs  unified_bench.rs
crates/ordo-core/examples/: basic_usage.rs
crates/ordo-core/src/: error.rs  lib.rs
crates/ordo-core/src/context/: mod.rs  schema.rs  store.rs  value.rs
crates/ordo-core/src/expr/: ast.rs  bytecode.rs  compiler.rs  eval.rs  functions.rs  mod.rs  optimizer.rs  parser.rs  profiler.rs  vectorized.rs  vm.rs
crates/ordo-core/src/expr/jit/: cache.rs  compiler.rs  evaluator.rs  mod.rs  schema_compiler.rs  schema_evaluator.rs  typed_context.rs
crates/ordo-core/src/filter/: json_predicate.rs  mod.rs  mongo.rs  partial_eval.rs  path_collector.rs  sql.rs
crates/ordo-core/src/rule/: compiled.rs  compiled_executor.rs  compiler.rs  executor.rs  metrics.rs  mod.rs  model.rs  step.rs
crates/ordo-core/src/signature/: ed25519.rs  mod.rs  signer.rs  verifier.rs
crates/ordo-core/src/trace/: mod.rs
crates/ordo-derive/: Cargo.toml
crates/ordo-derive/src/: lib.rs
crates/ordo-proto/: Cargo.toml  build.rs
crates/ordo-proto/proto/: ordo.proto
crates/ordo-proto/src/: lib.rs
crates/ordo-server/: Cargo.toml
crates/ordo-server/src/: api.rs  api_integration_tests.rs  api_tests.rs  audit.rs  config.rs  error.rs  grpc.rs  json.rs  main.rs  metrics.rs  rate_limiter.rs  runtime_config.rs  store.rs  telemetry.rs  tenant.rs  uds.rs  webhook.rs
crates/ordo-server/src/debug/: api.rs  mod.rs  session.rs  types.rs
crates/ordo-server/src/middleware/: mod.rs  role.rs  tenant.rs
crates/ordo-server/src/sync/: event.rs  file_watcher.rs  nats_sync.rs
crates/ordo-server/tests/: grpc_test.rs  uds_test.rs
crates/ordo-server/tests/common/: mod.rs
crates/ordo-wasm/: Cargo.toml  build.sh
crates/ordo-wasm/src/: lib.rs
deploy/nomad/: README.md  deploy.sh  k6-load-test.nomad  ordo-server-dev.nomad  ordo-server.nomad
docs/research/: expression_optimization_report.md
ordo-editor/: .eslintrc.cjs  .gitignore  .prettierrc  package.json  pnpm-lock.yaml  tsconfig.json
ordo-editor/.changeset/: config.json  fiery-taxes-fall.md
ordo-editor/apps/docs/: DEPLOYMENT.md  index.md  package.json  vercel.json
ordo-editor/apps/docs/.vitepress/: config.mts
ordo-editor/apps/docs/api/: grpc-api.md  http-api.md  wasm.md
ordo-editor/apps/docs/en/: index.md
ordo-editor/apps/docs/en/api/: filter-api.md  http-api.md  wasm.md
ordo-editor/apps/docs/en/guide/: audit-logging.md  decision-table.md  distributed-deployment.md  editor-store.md  expression-syntax.md  getting-started.md  quick-start.md  rule-signing.md  rule-structure.md  versioning.md  what-is-ordo.md
ordo-editor/apps/docs/en/reference/: benchmark-chart.md  benchmarks.md  cli.md  configuration.md  metrics.md
ordo-editor/apps/docs/guide/: audit-logging.md  builtin-functions.md  expression-syntax.md  getting-started.md  persistence.md  quick-start.md  rule-structure.md  versioning.md
ordo-editor/apps/docs/reference/: cli.md  configuration.md  metrics.md
ordo-editor/apps/docs/zh/: index.md
ordo-editor/apps/docs/zh/api/: filter-api.md  grpc-api.md  http-api.md  wasm.md
ordo-editor/apps/docs/zh/guide/: audit-logging.md  builtin-functions.md  decision-table.md  distributed-deployment.md  editor-store.md  expression-syntax.md  (+7 more)
ordo-editor/apps/playground/: index.html  package.json  tsconfig.json  vite.config.ts
ordo-editor/apps/playground/src/: App.vue  main.ts
roadmap/: PRODUCT_ROADMAP.md
scripts/: bench-animation.py  bench-report.sh  bench-results.csv  benchmark.sh  k6_benchmark.js  setup-hooks.sh  sync-version.sh  test_server.sh
scripts/bench/: benchmark-runner.sh
scripts/bench/docker/: Dockerfile.grule  Dockerfile.json-rules  Dockerfile.opa  Dockerfile.ordo
scripts/bench/results/20260311_174032/: metadata.json
scripts/bench/results/ordo-optimized/: metadata.json
scripts/bench/rules/grule/: go.mod  main.go
scripts/bench/rules/json-rules/: package-lock.json  package.json  server.js
scripts/bench/rules/opa/: L1.rego  L2.rego  L3.rego  L4.rego
scripts/bench/rules/ordo/: rules.json
sdk/go/: README.md  go.mod
sdk/go/examples/basic/: main.go
sdk/go/examples/batch/: main.go
sdk/go/examples/retry/: main.go
sdk/go/ordo/: client.go  options.go  types.go
sdk/go/ordo/batch/: executor.go
sdk/go/ordo/grpc/: client.go  pool.go
sdk/go/ordo/http/: client.go  transport.go
sdk/go/ordo/retry/: backoff.go  retry.go
sdk/go/ordo/types/: errors.go  types.go
sdk/go/proto/v1/: ordo.pb.go  ordo_grpc.pb.go
sdk/java/: README.md  pom.xml
sdk/java/examples/: BasicExample.java  BatchExample.java  RetryExample.java
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py  batch.py  retry_example.py
sdk/python/ordo/: __init__.py  batch.py  client.py  errors.py  grpc_client.py  http_client.py  models.py  retry.py
sdk/python/ordo/_proto/: __init__.py
sdk/python/proto/: ordo.proto
sdk/python/tests/: test_client.py  test_models.py  test_retry.py
static/: loading.html
(+1774 files in other folders)
