[workspace]
resolver = "2"
members = [
    "crates/ordo-core",
    "crates/ordo-proto", 
    "crates/ordo-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ordo Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 错误处理
thiserror = "1"
anyhow = "1"

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 高性能数据结构
hashbrown = "0.14"
smallvec = "1"
parking_lot = "0.12"

# 正则和时间
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# 监控
prometheus = "0.13"

