[package]
name = "ordo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
hashbrown.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

# JIT compilation
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-codegen.workspace = true

# Concurrent data structures
dashmap.workspace = true
crossbeam-channel.workspace = true
lru.workspace = true

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "jit_bench"
harness = false
