[package]
name = "ordo-core"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
hashbrown.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true

# JIT compilation (optional, not available on wasm32)
cranelift = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }

# Concurrent data structures
dashmap.workspace = true
crossbeam-channel.workspace = true
lru.workspace = true

# Derive macros
ordo-derive = { workspace = true, optional = true }

[features]
default = ["derive", "jit"]
derive = ["ordo-derive"]
jit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native", "cranelift-codegen"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
ordo-derive = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "schema_jit_bench"
harness = false

[[bench]]
name = "jit_comparison_bench"
harness = false

[[bench]]
name = "jit_realistic_bench"
harness = false

[[bench]]
name = "jit_stress_bench"
harness = false
