[package]
name = "ordo-derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the Ordo rule engine — #[derive(TypedContext)] for schema-aware JIT"
license = "MIT"
keywords = ["rule-engine", "jit", "derive", "macros", "ordo"]
categories = ["development-tools"]
repository = "https://github.com/Pama-Lee/Ordo"
homepage = "https://github.com/Pama-Lee/Ordo"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
