[package]
name = "ordo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ordo-core = { version = "0.1.0", path = "../ordo-core" }
ordo-proto = { version = "0.1.0", path = "../ordo-proto" }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
