[package]
name = "ordo-server"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum.workspace = true
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
once_cell = "1.19"
ordo-core = { version = "0.2.0", path = "../ordo-core" }
ordo-proto = { version = "0.2.0", path = "../ordo-proto" }
parking_lot.workspace = true
prost.workspace = true
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
prometheus.workspace = true
lazy_static = "1.4"
chrono.workspace = true
regex.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile = "3"
