[package]
name = "ordo-server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum.workspace = true
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
once_cell = "1.19"
ordo-core = { version = "0.2.0", path = "../ordo-core" }
ordo-proto = { version = "0.2.0", path = "../ordo-proto" }
parking_lot.workspace = true
prost.workspace = true
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors", "catch-panic", "limit", "timeout"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
prometheus.workspace = true
lazy_static = "1.4"
chrono.workspace = true
regex.workspace = true
dashmap.workspace = true
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
async-nats = { version = "0.38", optional = true }
hostname = "0.4"

[features]
default = []
nats-sync = ["dep:async-nats"]

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
