[package]
name = "ordo-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Ordo Team"]
description = "WebAssembly bindings for Ordo Rule Engine"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Disable JIT feature for WASM (Cranelift doesn't support wasm32 target)
ordo-core = { path = "../ordo-core", default-features = false, features = ["derive"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary

